--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <body>
 
-<h2>The alt Attribute</h2>
-<p>The alt attribute should reflect the image content, so users who cannot see the image get an understanding of what the image contains:</p>
+<h1>This is Jeffrey Ngai</h1>
+<p>Jeffrey Ngai has appeared in Hong Kong TV shows like Be a Better Man, Be On Game and In Geek We Trust. His star has risen with his role in new drama I Swim.</p>
 
-<img src="	https://multimedia.3m.com/mws/media/1852845J/automotive.jpg" alt="Girl with a jacket" width="500" height="600">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_kpLa3YvAOur48FPW61oiaJWyY8xbAqKvBR97B64EWXNM9h-M" alt="Girl with a jacket" width="500" height="600">
 
 </body>
 </html>
+
